--- a/src/so_arm100_moveit/package.xml
+++ b/src/so_arm100_moveit/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ro_arm100_moveit</name>
+  <name>so_arm100_moveit</name>
   <version>0.3.0</version>
   <description>
-     An automatically generated package with all the configuration and launch files for using the st3215_ros2_control with the MoveIt Motion Planning Framework
+     An automatically generated package with all the configuration and launch files for using the so_arm100 with the MoveIt Motion Planning Framework
   </description>
-  <maintainer email="john@soundelve.com">John Vial</maintainer>
+  <maintainer email="john@soundelve.com">John</maintainer>
 
   <license>BSD</license>
 
@@ -14,7 +14,7 @@
   <url type="bugtracker">https://github.com/ros-planning/moveit2/issues</url>
   <url type="repository">https://github.com/ros-planning/moveit2</url>
 
-  <author email="john@soundelve.com">John Vial</author>
+  <author email="john@soundelve.com">John</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
@@ -30,17 +30,14 @@
        We don't include them by default to prevent installing gazebo and all its dependencies. -->
   <!-- <exec_depend>joint_trajectory_controller</exec_depend> -->
   <!-- <exec_depend>gazebo_ros_control</exec_depend> -->
-  <exec_depend>controller_manager</exec_depend>
   <exec_depend>moveit_configs_utils</exec_depend>
   <exec_depend>moveit_ros_move_group</exec_depend>
   <exec_depend>moveit_ros_visualization</exec_depend>
-  <exec_depend>moveit_setup_assistant</exec_depend>
-  <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>rviz2</exec_depend>
   <exec_depend>rviz_common</exec_depend>
   <exec_depend>rviz_default_plugins</exec_depend>
-  <exec_depend>st3215_ros2_control</exec_depend>
-  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>so_arm100</exec_depend>
+  <exec_depend>xacro</exec_depend>
 
 
   <export>
